--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,6 @@ node_js:
 before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -qq default-jdk g++ make
+  - echo "127.0.0.1 $HOSTNAME" | sudo tee -a /etc/hosts
 env:
   - JAVA_HOME="/usr/lib/jvm/default-java"
