--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jmx",
   "version": "0.1.0",
-  "description": "node.js bridge library to communicate with java applications through JMX.",
+  "description": "Bridge library to communicate with java applications through JMX.",
   "homepage": "https://github.com/onddo/node-jmx",
   "bugs": "https://github.com/onddo/node-jmx/issues",
   "main": "index.js",
