--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "node": ">=0.6.0"
   },
   "dependencies": {
-    "java": ">=0.2.1"
+    "java": "~0.2.1"
   },
   "devDependencies": {
     "mocha": "~1.9.0",
