--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jmx",
   "version": "0.2.0",
   "description": "Bridge library to communicate with java applications through JMX.",
-  "homepage": "https://github.com/onddo/node-jmx",
+  "homepage": "http://onddo.github.io/node-jmx",
   "bugs": "https://github.com/onddo/node-jmx/issues",
   "main": "index.js",
   "scripts": {
