--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,6 @@ node_js:
 before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -qq default-jdk g++ make
-  - echo "127.0.0.1 $HOSTNAME" | sudo tee -a /etc/hosts
+  - echo -e "127.0.0.1 localhost\n127.0.0.1 $HOSTNAME" | sudo tee -a /etc/hosts
 env:
   - JAVA_HOME="/usr/lib/jvm/default-java"
