--- a/package.json
+++ b/package.json
@@ -35,11 +35,12 @@
     "async": "~0.9.0",
     "java": "~0.4.3"
   },
-  "devDependencies": {
     "mocha": "~2.0.1",
     "jscoverage" : "~0.5.9",
     "mocha-lcov-reporter" : "0.0.1",
-    "coveralls": "2.11.2",
+    "coveralls": "2.11.2"
+  },
+  "optionalDependencies": {
     "jshint": "= 2.5.10"
   }
 }
