--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "bugs": "https://github.com/onddo/node-jmx/issues",
   "main": "index.js",
   "scripts": {
-    "test": "make test"
+    "test": "make style test"
   },
   "repository": {
     "type": "git",
