--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,16 @@
 language: node_js
 
+sudo: false
+
+addons:
+  apt:
+    sources:
+    - ubuntu-toolchain-r-test
+    packages:
+    - default-jdk
+    - g++-4.8
+    - make
+
 node_js:
 - "0.10"
 - "0.11"
@@ -8,9 +19,5 @@ node_js:
 - "4.1"
 
 before_install:
-- sudo apt-get update -qq
-- sudo apt-get install -qq default-jdk g++ make
-- echo -e "127.0.0.1 localhost\n127.0.0.1 travis001.onddo.com" | sudo tee -a /etc/hosts
-- sudo hostname 'travis001.onddo.com'
-- hostname | sudo tee /etc/hostname
+- export CXX=g++-4.8
 - npm install -g jshint || true
