--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jmx",
   "version": "0.5.0-dev",
-  "description": "Bridge library to communicate with java applications through JMX.",
+  "description": "Bridge library to communicate with Java applications through JMX.",
   "homepage": "http://zuazo.github.io/node-jmx",
   "bugs": "https://github.com/zuazo/node-jmx/issues",
   "main": "index.js",
