--- a/package.json
+++ b/package.json
@@ -23,10 +23,7 @@
     "email": "xabier@zuazo.org",
     "url": "https://github.com/zuazo"
   },
-  "licenses": [ {
-    "type": "Apache 2.0",
-    "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
-  } ],
+  "license": "Apache-2.0",
   "readmeFilename": "README.md",
   "engines": {
     "node": ">=0.10.0"
