Revert "Travis CI: Install any g++ version available"
This reverts commit 9e50f921ad1899e8a4c7816880f75c9d8294f63d.

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ addons:
     - ubuntu-toolchain-r-test
     packages:
     - default-jdk
-    - g++
+    - g++-4.8
     - make
 
 node_js:
@@ -19,5 +19,5 @@ node_js:
 - "4.1"
 
 before_install:
-- export CXX=g++
+- export CXX=g++-4.8
 - npm install -g jshint || true
