--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   },
   "dependencies": {
     "async": "~1.5.0",
-    "java": "~0.9.0"
+    "java": "^0.11.1"
   },
 "devDependencies": {
     "mocha": "~2.0.1",
