--- a/package.json
+++ b/package.json
@@ -29,13 +29,13 @@
     "node": ">=0.10.0"
   },
   "dependencies": {
-    "async": "~1.5.0",
-    "java": "~0.9.0"
+    "async": "^3.2.0",
+    "java": "~0.12.1"
   },
-"devDependencies": {
+  "devDependencies": {
     "mocha": "~2.0.1",
-    "jscoverage" : "~0.5.9",
-    "mocha-lcov-reporter" : "0.0.1",
+    "jscoverage": "~0.5.9",
+    "mocha-lcov-reporter": "0.0.1",
     "coveralls": "2.11.2"
   }
 }
